<resources>
    <string name="app_name">ServerZ</string>
    <string name="players">PLAYERS</string>
    <string name="number_of_hours_until_night">Number of hours until night</string>
    <string name="amount_of_players_on_the_server">Amount of players on the server</string>
    <string name="server_name">Server name</string>
    <string name="button">Button</string>
    <string name="serverz">SERVERZ</string>
    <string name="enter_item_name_to_add_in_ist">Enter item name to add in ist</string>
    <string name="add">Add</string>
    <string name="enter_item_name_to_add_in_list" />
    <string name="write_new_server">Write new server</string>
    <string name="text" />
    <string name="tttt">Text</string>
    <string name="e_g_this_one">e.g this one</string>
    <string name="enter_server">Enter server</string>
    <string name="greet">greet</string>
    <string name="id">id</string>
    <string name="maxPlayers" />
    <string name="address" />
    <string name="playersNum" />
    <string name="name" />
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="add_server">Add server</string>
    <string name="amountofplayers">amountOfPlayers</string>
    <string name="servertime">serverTime</string>
    <string name="amountOfPlayers" />
    <string name="serverTime" />
    <string name="jakis_tekst">jakis tekst</string>
    <string name="save">Save</string>
    <string name="do_you_really_want_to_remove_the_server">Do you really want to remove the server?</string>
    <string name="mode">Mode</string>
</resources>