<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D1423"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/server_name"
        android:textColor="#F4F5F9"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="188dp"
            android:layout_weight="1"
            android:background="#0D1423"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/amount_of_players_on_the_server"
            android:textColor="#F4F5F9"
            android:textSize="20sp" />

        <TextView
            android:layout_height="188dp"
            android:layout_weight="1"
            android:background="#0D1423"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/number_of_hours_until_night"
            android:textColor="#FEFEFE"
            android:textSize="20sp" />

    </TableRow>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#0D1423"
        android:progressTint="#135070" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0D1423"
        android:gravity="center"
        android:text="@string/players"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D1423"
        android:visibility="visible">

    </ListView>


</LinearLayout>