<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0D1423"
    android:padding="10dp">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="392dp"
        android:layout_height="112dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" >

             <EditText
                 android:id="@+id/editTextIp"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:hint="@string/ip"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
                 android:autofillHints=""
                 android:inputType="text" />
            <EditText
                android:id="@+id/editTextPort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/port"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:autofillHints=""
                android:inputType="number" />
    </TableRow>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableRow"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toRightOf="@id/button_save"
            android:text="Dismiss"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>