<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0D1423"
    android:padding="10dp">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" >

             <EditText
                 android:id="@+id/editTextIp"
                 android:layout_width="392dp"
                 android:layout_height="90dp"
                 android:layout_weight="1"
                 android:hint="@string/ip"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
                 android:autofillHints=""
                 android:inputType="number|numberDecimal"
                 android:digits="0123456789." />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_below="@id/tableRow"
        android:textSize="25sp"
        android:textStyle="bold"
        android:inputType="number">

            <EditText
                android:id="@+id/editTextPort"
                android:layout_width="392dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:hint="@string/port"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:autofillHints=""
                android:inputType="number" />
    </TableRow>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableRow2"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/saveButton"
            android:textAllCaps="false"
            android:text="@string/dismiss"
            android:textColor="@color/purple_200"
            android:background="@color/purple_700"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>